// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1a4022d88c4664",
  "0042864d705045",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "0470c6d84e3c67",
  "07ec87883d8303",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1152ee5e00a9c5",
  "0fcd003aa134fd",
  "0a7bc7a19c196d",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "177af8ff308856",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "1297ba12699dd7",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "090002547a9be0",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "03e1fd9833de0b",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "0270a2bfaf05bf",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "173fd30a5534b1",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "1e0c9dae21c114",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "0747a646561ee9",
  "0e4db3569f7cc6",
  "0033c969cdb65f",
  "1e2c800c7488d4",
  "151a4865e792cc",
  "0e6b7596b44e8f",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "04cd3cdbc9ff33",
  "033ca8dc6b9aef",
  "1a4f8db291bb10",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "00fd4a639091ab",
  "1e177cfec9272e",
  "0c899f8d401940",
  "072006f3087ef9",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "0468c69bc0a9ad",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "05c2f4bf09ac38",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "1bc92e2652560a",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "10761e7f06747a",
  "12c61b266472ac",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "0004c8f44c8226",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "09d5afcf41f056",
  "09476badc63922",
  "0c9a478b190f14",
  "173ceaf89bc57c",
  "183e6fa57f13e3",
  "0c2b86db737d53",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "081b9986e438a0",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "1db89cfed42bed",
  "13a023cb7733af",
  "0191962f157852",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "0e60bf400f1771",
  "1c862913173a2f",
  "1fbef160ba5563",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "14b265b13b0a70",
  "123ae2de91cb0f",
  "1e58d3b5e46062",
  "0c280608473dc1",
  "131db521b32dd4",
  "0f108d6b7b6fd0",
  "14b7af2ac46b47",
  "18ab0fcaec7f21",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1308626d4251de",
  "07a1db3c4483e2",
  "146fcb9d61e9eb",
  "1eabfe9a425031",
  "0c283441650d8b",
  "16e29531272f46",
  "005cae0faba801",
  "0c8ae9c781bddf",
  "16b9becbe1ea5c",
  "0d76a9dce25b89",
  "1fd1cb52908921",
  "1dd996b5b3efbc",
  "0cb2c1a6a3dbcd",
  "1aa2389f602570",
  "16049bfcbb4eec",
  "085f4be779a84e",
  "05f389c2ee6043",
  "1e1417fd446fc8",
  "0027008fe2faf9",
  "0a4089c1d1ba93",
  "179c5355e4c03d",
  "0e27afeb62b671",
  "0ce119b6d57e26",
  "03ac9e8edeae20",
  "099a09697da63b",
  "0523478561b1df",
  "133da274a7621e",
  "00162d4483f1dc",
  "1f4030d67d1788",
  "022fb5d34a0fb8",
  "0f1f40c76a4fab",
  "069fc7f4dedca9",
  "096e6982b8f7d3",
  "07be242ed4cb4d",
  "1ae5930d30459b",
  "10f628064424da",
  "126afb0c3d108d",
  "070e532f4398be",
  "1e7cb2ea1d7aea",
  "1c92786d67a90b",
  "0042c8b0dbc7cc",
  "1c72c39f710bbb",
  "03c40c6671517a",
  "0ddc2239f8fed6",
  "18bef1a34fb32a",
  "199cad4b2fa210",
  "0c6f4618157976",
  "12cf42450d553b",
  "1b76eda138d077",
  "0dc691b5884bcd",
  "00dd768f806c1d",
  "08901db71f5cfc",
  "1313eec92d401f",
  "00aadee3d78d2e",
  "1da704f12ce7c1",
  "0e952a08a2c1bd",
  "154ec6e158f8ba",
  "0321dc4a266040",
  "123c934e613fdc",
  "1fd36a7cc18f69",
  "0b79d7bf7358c6",
  "1023b3b09d5e11",
  "1994f81e8636f1",
  "0daf49ecf7d2df",
  "1e9587cdd6bdd7",
  "1e284ca4a3423d",
  "0405f5b9a5e251",
  "00b44075614ccd",
  "169837d4e18ac5",
  "1952691be0cc07",
  "1fc5e3fcf790be",
  "0ff7536f9e8b37",
  "1c08b7e7ed8498",
  "08ea8752ade1ef",
  "03795e6ced827d",
  "10f69552f3d803",
  "19da0472814bae",
  "151d0d2f1d059c",
  "1b19c8171569ca",
  "0aa72f6a26db7e",
  "1a3f85850ae4a4",
  "1f40e98c36c377",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "0f2f1fdf3dcc9e",
  "1c574559d2cf70",
  "031a3cfe22700c",
  "14ee78f7b90108",
  "1dcb3d1fbfb74e",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "1417d1979976a8",
  "155fcaeed56be6",
  "06be3a6c6469b0",
  "0636c5e8f576a7",
  "101139cfc40652",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12e936fb87b7f6",
  "01ec0a1495fc3c",
  "0a3746b37d315c",
  "1b8f42fb0713fa",
  "14972aa3f06acf",
  "08050f7f6495ec",
  "181881f41a999c",
  "0883dac6baf369",
  "1b956175dadb93",
  "0791ce03e105c0",
  "0a67661fb354ec",
  "0c7c7891d675ab",
  "1742bda58ecf6e",
  "1f56b7ee8add7f",
  "07a38e203a54cd",
  "0707016f48df58",
  "19e6811a37b2d9",
  "0cb3b7860b1412",
  "0029a30b8c20de",
  "0ee17919795053",
  "0ea1865633d000",
  "16f9c0480b903d",
  "0cf1974c943a26",
  "1202dab3f24394",
  "04d04a27b070ef",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "149480a4a0ccef",
  "18c189019061ed",
  "082ebf4885d6c2",
  "15ee51a0703be5",
  "0e70319671fa71",
  "0e66012806bf98",
  "18c5f156a6c9df",
  "0ac8c1376d43c2",
  "04845edec85c5a",
  "1b96809b9c33df",
  "1eb63c3794de81",
  "10746fe417edad",
  "06e511b5f90142",
  "145b5951ae2735",
  "17f8e68d7e782c",
  "1b2fdec999b972",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "11fa9a34cc2b48",
  "1fd4756d3ce9bb",
  "18b32b3bcc255a",
  "04a0c9d9b114d7",
  "1c3a064089f63e",
  "0c225c0a6d0413",
  "133ead5c70bdee",
  "0e3a8338836748",
  "1a870e0e2168f0",
  "0f759e38ed072c",
  "1c1d4048ddd442",
  "088c164e3875f4",
  "19008235c949ab",
  "19dd2a8a0f06d3",
  "00247d6b2f38b1",
  "18615081f8d847",
  "06e422c9bef7c8",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "11146165f156ec",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "12b4b6a360d105",
  "108e9094e71276",
  "01b2af492c9815",
  "164acfadc229d3",
  "11145337e30c4a",
  "15db8bbe7c3eee",
  "084370b86a6756",
  "19c94adc45f7b1",
  "1ba552dc52f04e",
  "1007030e00fdc4",
  "13a7b1a81f49c6",
  "1346e45d92f87e",
  "0a9b5966fde713",
  "07f67bff9f3218",
  "060ad6cb28112f",
  "1bf637b4f53baf",
  "11b2c25f5b857c",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1a4022d88c4664",
  "123ae2de91cb0f",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1fd1cb52908921",
  "0fcd003aa134fd",
  "0cb2c1a6a3dbcd",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "0027008fe2faf9",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "133da274a7621e",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "07be242ed4cb4d",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "1e7cb2ea1d7aea",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "1b76eda138d077",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "0321dc4a266040",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "00b44075614ccd",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "1a3f85850ae4a4",
  "0e4db3569f7cc6",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "033ca8dc6b9aef",
  "155fcaeed56be6",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "14972aa3f06acf",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "0707016f48df58",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "0ea1865633d000",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "082ebf4885d6c2",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "145b5951ae2735",
  "09476badc63922",
  "0c9a478b190f14",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "18b32b3bcc255a",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "01b2af492c9815",
  "1c862913173a2f",
  "11145337e30c4a",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "0045beddc722bd",
  "1143b2e2bb3b2a",
  "1c6b810a885d7f",
  "03ba88e941a50d",
  "18b1f2f040fbf1",
  "060565be6ec381",
  "11676a8f324f7f",
  "0f6902e45b2e59",
  "0f666f62c56967",
  "18200c8e209149",
  "12b35c7ac62754",
  "131d5f6ce6393a",
  "064000b77a83e0",
  "0c7ad404c74275",
  "04b03128247401",
  "1ef34498f1fa52",
  "14092dda831d18",
  "1d981aa455c74a",
  "1dda7462d7fbf2",
  "18b5711606cc95",
  "022e7b620216c0",
  "01af6a7f6c71ef",
  "14f8d87ba314ef",
  "0a69f2c6163ae6",
  "121be1d171cc0d",
  "06bcadc44ea2f9",
  "0bf98828554bbe",
  "15151bae3035a3",
  "1306e6e4591c78",
  "1511c1390757bb",
  "11e47f5787637c",
  "1b27e1ccc6d446",
  "0b993f22dfcc31",
  "0c8517870bb9e4",
  "1607f70ba41836",
  "05ae81dbf791c4",
  "0f2d96db8f8b0e",
  "1e1d315d3f349f",
  "05e5c501956c2d",
  "0d72473b0caec5",
  "0fdfa1032b0cba",
  "1b4fda73e2a61d",
  "04aadcc4a21cf7",
  "0865c280e2d6ba",
  "16df9cfb43735d",
  "10db73feb6f008",
  "068b3728d63945",
  "099a8e6d7a79a1",
  "180b62c32a11f3",
  "196401f58b4b47",
  "16502a28adbf6d",
  "028d54bc9fbb34",
  "0e9cf32bc9dbeb",
  "119ef09092a051",
  "119d08389cdcb7",
  "053c1c1b15ea8c",
  "16c36242853d69",
  "1e3482d109418d",
  "107a614036d531",
  "045d12ad69fec3",
  "13a41d0a039f70",
  "0258291cc7e99f",
  "103cab3dbf85ae",
  "13c15c4430148c",
  "0c68211a79da0f",
  "1687c39c173589",
  "07debf9272f6ab",
  "1d0e96d988594c",
  "10e37a53746d7a",
  "0ed73a499cb974",
  "136d8ff2eb3856",
  "019887e39d5ef7",
  "08f76eea7aa1d6",
  "0f656a643e6bdf",
  "1e22865f42e205",
  "0f1a1b933f1f00",
  "16daf5c26c474d",
  "0aa2270358bf7b",
  "07f2683fd2423d",
  "1d8e85a607c904",
  "176ae219b30ed7",
  "1f347dc68e7dc0",
  "0052a5c2518113",
  "0f37f1f0bf5033",
  "15a4dd768319c9",
  "054818065b0b7c",
  "0e87c954c129ad",
  "101dbf7359102b",
  "198909c880a283",
  "1ac2e982857758",
  "16284a83898976",
  "15ceed64c6f3fe",
  "15daeb8124f77e",
  "116f5992ffd3e0",
  "03797f4910dc16",
  "11c88a0484e211",
  "1da9888f9352fd",
  "020b31cc19b89c",
  "0ab261e0e75579",
  "17a744f9c52445",
  "1b36c15426ac31",
  "03dded007b7552",
  "15f4ad23fe12a7",
  "07d189f22c2823",
  "0e07a2d635cc65",
  "0b44468e514a8a",
  "0a8330a1df6f66",
  "1c7990f063f31d",
  "035d60b39a458f",
  "18d46989ea126d",
  "12a92224253a55",
  "0491f78cbd616a",
  "07f16166a836e3",
  "060c813a795907",
  "0c64087041f532",
  "143ccf0a638a17",
  "098c3e1c9813cf",
  "13470474a5cc58",
  "1c2ca45b4819d3",
  "0900b042ca4e84",
  "190b3c0a198bca",
  "1006860e9cd2da",
  "1aa45be0c7ac7a",
  "0f8dce5ceb6b56",
  "178012f53e5096",
  "007191a133808d",
  "15e5c262b2a24a",
  "1f2febe72863f6",
  "1b2698f80f8fe1",
  "12ce0cc47dd819",
  "049f4d96ca677c",
  "0f1a5200b7dad7",
  "12b6942e0ec760",
  "1ab3e1bd4a68b7",
  "1f1454be7a9ac6",
  "1154fab6c46dfc",
  "046be333dead57",
  "03ce7ec0ca5a09",
  "1d15244bb66e7a",
  "077ed01fa12ff0",
  "091ed15b9c31db",
  "04f0c43fc925d6",
  "01665b6dbc144f",
  "12ee5eb637ea37",
  "1af039b51d693c",
  "1f44285abe0791",
  "025536638aa3dd",
  "10575c02ddbf0f",
  "1f953cf3b5fbbd",
  "1bd99c3cbbf33c",
  "1a309c4dc078c5",
  "03df3f5b67950c",
  "174c90178df33a",
  "05671ccfa99d54",
  "08a984d4de378c",
  "0a1d017b67cc93",
  "0d47eb8acc92ab",
  "02b46574f1f743",
  "1714e1c44e7f14",
  "0c77ee015fc298",
  "1721cefe3fe54f",
  "1af191f7fb5050",
  "180d633bf8bc43",
  "19581c250dd989",
  "18b23daa15e3f5",
  "023780faa3a320",
  "08072e5803db5e",
  "049e4c9d2ac65c",
  "02dac6f3ceaf25",
  "1f1201bdcf8289",
  "06e619a0cd56d5",
  "01a41c93013f8f",
  "0a8ed51b5e82fe",
  "188107ce4e6174",
  "1c7ff51d37b1a4",
  "0ad52d8714c5a4",
  "1dfacf08e9a057",
  "00c9de0d0241c3",
  "068d6256b2f988",
  "09327aaf7cd4c6",
  "0382511cd16a93",
  "11153f338eae5e",
  "01504e41686959",
  "02c153e0b5157d",
  "06937701fcc13b",
  "14374f9375e4f7",
  "07f0aaec86327b",
  "1bf9f02c54bcf0",
  "0a585fc108f6bf",
  "1c2d37234d64a6",
  "10e61f6aa7c134",
  "01e1f276fdaa93",
  "0972184c017211",
  "094119fe65b5c8",
  "0c88762c099401",
  "13cc0044218c7c",
  "0d498b9277069b",
  "19d311dd787b21",
  "04802a644369eb",
  "13a8881499f38e",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "073cdffeedcd3c",
  "1ae90c1385d7af",
  "0a23a7fd698ee3",
  "1b3da08a066559",
  "1356838502f49c",
  "0e26f0a8474b27",
  "11676a8f324f7f",
  "161265a64ab82b",
  "0f666f62c56967",
  "04bf890703032b",
  "1e8ad540aaaeb3",
  "0bb29ab0c1b24a",
  "12281e3e43ef20",
  "0f9b577a1bf73d",
  "0eea9a858c9a97",
  "01ccb20a9ccdb5",
  "14092dda831d18",
  "19c405507258fe",
  "166cb88c53e522",
  "1b39a3776728d9",
  "19d02c0884bafb",
  "17ab19f751fdcb",
  "153a683029117b",
  "1bbb56eddb119e",
  "12c2a0c5e2f343",
  "16a7d7f0fed670",
  "032f66fa8ce258",
  "099c5a497bffcf",
  "0271e24ce0a579",
  "026ccc45a6ca79",
  "030a63bc883d68",
  "1e450cfe161531",
  "0052b66539159b",
  "13156e98b04e95",
  "1e399b102cb4e4",
  "05ae81dbf791c4",
  "0af86e74cfa227",
  "1fc42f3a62bc9d",
  "1a94061010bcfb",
  "1383da9bf6836b",
  "129a485452050b",
  "19d14e545b7634",
  "06704575888dac",
  "16374ccfdb8997",
  "029d842f429a06",
  "13d912b5e9871e",
  "0c57f0525f70be",
  "099a8e6d7a79a1",
  "17061341257df6",
  "02ab82f6e9424f",
  "08a4c5ba7d2c3e",
  "028d54bc9fbb34",
  "0e760b20eb9047",
  "119ef09092a051",
  "1a04468f2e05ce",
  "0be86535767360",
  "16e036065aa629",
  "1e3482d109418d",
  "137b53374fbb46",
  "0693443428a93b",
  "1e7ec67ef0f65c",
  "099ed6cdac3c8f",
  "117c67dd9459b8",
  "13c15c4430148c",
  "05ddcee261e6fa",
  "1687c39c173589",
  "0797ef69880907",
  "0fbfaab8be5522",
  "01b70d62b4a6df",
  "1269d69d2ad98d",
  "17711c7d887bce",
  "1a77d472c58291",
  "04075984ee07b3",
  "19203438b9f400",
  "0e629575afe073",
  "0bca1e280905c4",
  "0bad04072f44c0",
  "02e5db92c6b860",
  "17a44ebb4f1e6e",
  "0782c27297ae4e",
  "03aceeee5c2110",
  "1f347dc68e7dc0",
  "122127ade533a3",
  "10e9cfb1f0d0d2",
  "15986a261a6f3a",
  "1b48f60b6403d1",
  "090c3787b4e12f",
  "1a490c463cc37e",
  "11fad3af968291",
  "03f3acbbee9b72",
  "1c77685511e9b2",
  "06eed41ff6b8e7",
  "13ab58e1f5d2b1",
  "0e7ad4dcdb29d8",
  "19a97a788cf260",
  "14ba4fd6c294cf",
  "1d2c954fe3a93b",
  "04b3647dae218a",
  "0ab261e0e75579",
  "054166d1f27151",
  "066f8dda638078",
  "05d5270a602e59",
  "15f4ad23fe12a7",
  "00cd546c720a5f",
  "09abb8ca0cce27",
  "15bb98ea0123e0",
  "04a286f91ded4b",
  "04abd2b3686877",
  "03e92c726b2547",
  "07896b9c8fcd5f",
  "1c8973a8f372bb",
  "0491f78cbd616a",
  "08fefaa2ff544c",
  "1c2474f71cbc36",
  "0ab5b11a83cc88",
  "1befb03a0b9e03",
  "171c813d0d774c",
  "0a247827e573d9",
  "1855b3ee801e27",
  "0ee4933c67e6e4",
  "190b3c0a198bca",
  "0be0d219e9ae30",
  "1aa45be0c7ac7a",
  "152a321004c64a",
  "1df23f25bc62dc",
  "1fb46fd4974f8f",
  "19610411753bd1",
  "0e7132440ca878",
  "05ae4687a3b820",
  "12ce0cc47dd819",
  "08041e20b2b9d7",
  "1f1043535fecc2",
  "14d9da06154151",
  "1a0b673ab8dedb",
  "0a5ecd6783e1a8",
  "1154fab6c46dfc",
  "0e19e445466d72",
  "1a84ad31033b90",
  "1f403f592a431c",
  "16c39a6d54267d",
  "091ed15b9c31db",
  "0d2c362710ce9e",
  "01665b6dbc144f",
  "19e925969d0d03",
  "0cd78bfc0a926a",
  "0ff289e1144115",
  "025536638aa3dd",
  "1ec9f648afc42f",
  "0d6b5e820574bd",
  "13a0d3249f71d0",
  "16c3ea4ae93bcd",
  "10b45ba1777927",
  "08c022b73ba624",
  "1d2d066c8d4c79",
  "0d39d426003f58",
  "17e5c26b4ca6d1",
  "06e9c2aeb0b975",
  "1aaea8fba0b05d",
  "1c365eb7fd5cfc",
  "0e60bc7b35a37b",
  "0eace7fb6d9950",
  "11062f819012c1",
  "062f752afb1183",
  "18b7b43b624b1e",
  "18b23daa15e3f5",
  "009f0bbc49d31a",
  "08072e5803db5e",
  "0a27d5fd487e06",
  "0264bdfbd51e84",
  "18909a2baed07d",
  "06e619a0cd56d5",
  "1810b812a656ff",
  "0d0e1be8eeb23f",
  "064b7f9ca9e061",
  "123ca398414724",
  "042043c794be93",
  "0149bacfed0943",
  "15dc892c399351",
  "068d6256b2f988",
  "0f9fcd38f8bfd8",
  "00e4a11493c95d",
  "11153f338eae5e",
  "01504e41686959",
  "0a482999d618e9",
  "05a60b4d77770a",
  "098ae6fe61bb59",
  "1d14cdf9834d1d",
  "1001e90a922247",
  "0d1f893bc950f2",
  "13ba426cb677bd",
  "0715135ba71010",
  "0e8c8c93ece97f",
  "13c8fd8107f23d",
  "0d1b3c3e256bb1",
  "01b700858aa1a6",
  "13cc0044218c7c",
  "1b9becce63aa99",
  "100ad331e44369",
  "0d362a4da917e9",
  "027cbfa05f236d",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "0045beddc722bd",
  "1ae90c1385d7af",
  "1c6b810a885d7f",
  "03ba88e941a50d",
  "18b1f2f040fbf1",
  "060565be6ec381",
  "11676a8f324f7f",
  "0f6902e45b2e59",
  "0f666f62c56967",
  "04bf890703032b",
  "1e8ad540aaaeb3",
  "131d5f6ce6393a",
  "064000b77a83e0",
  "0c7ad404c74275",
  "04b03128247401",
  "1ef34498f1fa52",
  "14092dda831d18",
  "1d981aa455c74a",
  "1dda7462d7fbf2",
  "18b5711606cc95",
  "022e7b620216c0",
  "17ab19f751fdcb",
  "14f8d87ba314ef",
  "1bbb56eddb119e",
  "121be1d171cc0d",
  "06bcadc44ea2f9",
  "0bf98828554bbe",
  "15151bae3035a3",
  "1306e6e4591c78",
  "026ccc45a6ca79",
  "11e47f5787637c",
  "1b27e1ccc6d446",
  "0b993f22dfcc31",
  "0c8517870bb9e4",
  "1607f70ba41836",
  "05ae81dbf791c4",
  "0f2d96db8f8b0e",
  "1fc42f3a62bc9d",
  "05e5c501956c2d",
  "0d72473b0caec5",
  "0fdfa1032b0cba",
  "1b4fda73e2a61d",
  "04aadcc4a21cf7",
  "0865c280e2d6ba",
  "029d842f429a06",
  "10db73feb6f008",
  "068b3728d63945",
  "099a8e6d7a79a1",
  "180b62c32a11f3",
  "02ab82f6e9424f",
  "16502a28adbf6d",
  "028d54bc9fbb34",
  "0e9cf32bc9dbeb",
  "119ef09092a051",
  "119d08389cdcb7",
  "053c1c1b15ea8c",
  "16c36242853d69",
  "1e3482d109418d",
  "107a614036d531",
  "0693443428a93b",
  "13a41d0a039f70",
  "0258291cc7e99f",
  "103cab3dbf85ae",
  "13c15c4430148c",
  "0c68211a79da0f",
  "1687c39c173589",
  "07debf9272f6ab",
  "1d0e96d988594c",
  "01b70d62b4a6df",
  "0ed73a499cb974",
  "136d8ff2eb3856",
  "019887e39d5ef7",
  "08f76eea7aa1d6",
  "0f656a643e6bdf",
  "1e22865f42e205",
  "0f1a1b933f1f00",
  "16daf5c26c474d",
  "0aa2270358bf7b",
  "17a44ebb4f1e6e",
  "1d8e85a607c904",
  "176ae219b30ed7",
  "1f347dc68e7dc0",
  "0052a5c2518113",
  "0f37f1f0bf5033",
  "15a4dd768319c9",
  "054818065b0b7c",
  "0e87c954c129ad",
  "101dbf7359102b",
  "198909c880a283",
  "1ac2e982857758",
  "16284a83898976",
  "06eed41ff6b8e7",
  "15daeb8124f77e",
  "0e7ad4dcdb29d8",
  "19a97a788cf260",
  "14ba4fd6c294cf",
  "1d2c954fe3a93b",
  "020b31cc19b89c",
  "0ab261e0e75579",
  "17a744f9c52445",
  "1b36c15426ac31",
  "03dded007b7552",
  "15f4ad23fe12a7",
  "00cd546c720a5f",
  "0e07a2d635cc65",
  "15bb98ea0123e0",
  "0a8330a1df6f66",
  "1c7990f063f31d",
  "035d60b39a458f",
  "07896b9c8fcd5f",
  "1c8973a8f372bb",
  "0491f78cbd616a",
  "08fefaa2ff544c",
  "060c813a795907",
  "0c64087041f532",
  "143ccf0a638a17",
  "098c3e1c9813cf",
  "0a247827e573d9",
  "1c2ca45b4819d3",
  "0900b042ca4e84",
  "190b3c0a198bca",
  "1006860e9cd2da",
  "1aa45be0c7ac7a",
  "0f8dce5ceb6b56",
  "178012f53e5096",
  "007191a133808d",
  "15e5c262b2a24a",
  "1f2febe72863f6",
  "05ae4687a3b820",
  "12ce0cc47dd819",
  "049f4d96ca677c",
  "0f1a5200b7dad7",
  "12b6942e0ec760",
  "1a0b673ab8dedb",
  "1f1454be7a9ac6",
  "1154fab6c46dfc",
  "046be333dead57",
  "03ce7ec0ca5a09",
  "1f403f592a431c",
  "16c39a6d54267d",
  "091ed15b9c31db",
  "04f0c43fc925d6",
  "01665b6dbc144f",
  "19e925969d0d03",
  "1af039b51d693c",
  "1f44285abe0791",
  "025536638aa3dd",
  "10575c02ddbf0f",
  "1f953cf3b5fbbd",
  "1bd99c3cbbf33c",
  "1a309c4dc078c5",
  "03df3f5b67950c",
  "174c90178df33a",
  "05671ccfa99d54",
  "0d39d426003f58",
  "0a1d017b67cc93",
  "0d47eb8acc92ab",
  "1aaea8fba0b05d",
  "1c365eb7fd5cfc",
  "0e60bc7b35a37b",
  "1721cefe3fe54f",
  "1af191f7fb5050",
  "062f752afb1183",
  "19581c250dd989",
  "18b23daa15e3f5",
  "023780faa3a320",
  "08072e5803db5e",
  "049e4c9d2ac65c",
  "02dac6f3ceaf25",
  "1f1201bdcf8289",
  "06e619a0cd56d5",
  "01a41c93013f8f",
  "0a8ed51b5e82fe",
  "188107ce4e6174",
  "1c7ff51d37b1a4",
  "0ad52d8714c5a4",
  "1dfacf08e9a057",
  "15dc892c399351",
  "068d6256b2f988",
  "0f9fcd38f8bfd8",
  "0382511cd16a93",
  "11153f338eae5e",
  "01504e41686959",
  "02c153e0b5157d",
  "06937701fcc13b",
  "098ae6fe61bb59",
  "07f0aaec86327b",
  "1001e90a922247",
  "0a585fc108f6bf",
  "1c2d37234d64a6",
  "10e61f6aa7c134",
  "01e1f276fdaa93",
  "0972184c017211",
  "094119fe65b5c8",
  "0c88762c099401",
  "13cc0044218c7c",
  "0d498b9277069b",
  "19d311dd787b21",
  "04802a644369eb",
  "13a8881499f38e",
]
`;
